[project]
name = "qmlease"
version = "3.1.0a25"
description = "A flexible toolkit for Python programmer to efficiently develop QML graphical user interface."
license = "MIT"
readme = "README.md"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/likianta/qmlease"

[tool.poetry.dependencies]
python = "^3.8"
argsense = { version = "^1.0.1b0", source = "likianta" }
lk-logger = { version = "^6.0.6a1", source = "likianta" }
# lk-utils = "^3.1.3"
lk-utils = { version = "^3.3.0a12", source = "likianta" }
pyside6 = [
    { version = ">=6.4.3,<6.5.0", python = ">=3.8,<3.12", optional = true },
    { version = "^6.9.0", python = ">=3.12,<3.14", optional = true },
]
qtpy = "^2.4.3"

[tool.poetry.group.dev.dependencies]
# pyside2 = { version = "^5.15", python = ">=3.8,<3.11", optional = true }
pyside6 = [
    { version = ">=6.4.3,<6.5.0", python = ">=3.8,<3.12" },
    { version = "^6.9.0", python = ">=3.12,<3.14" },
]
remote-ipython = { version = "^1.0.0b11", source = "likianta" }
wat = "^0.6.0"

[project.optional-dependencies]
ui = ["pyside6"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://47.102.108.149:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
