[project]
name = "qmlease"
version = "4.0.0a2"
description = "A flexible toolkit for Python programmer to efficiently develop QML graphical user interface."
license = "MIT"
readme = "README.md"
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
requires-python = ">=3.10"
dynamic = ["dependencies"]
packages = [{ include = "qmlease" }]

[project.urls]
homepage = "https://github.com/likianta/qmlease"

[tool.poetry.dependencies]
python = "^3.10"
argsense = { version = "^1.1.1a0", source = "likianta" }
fake-typing = { version = "^0.1.3", source = "likianta" }  # DELETE
jurigged = "^0.6.1"  # requires python >= 3.9
lk-logger = { version = ">=6.0.7,<6.1.0", source = "likianta" }
lk-utils = { version = "^3.5.1", source = "likianta" }
materialyoucolor = "^3.0.2"
pyside6 = [
    { version = "^6.10.0", python = ">=3.12,<3.15", optional = true },
    { version = ">=6.4.3,<6.5.0", python = ">=3.10,<3.12", optional = true },
]
qtpy = "^2.4.3"

[tool.poetry.group.dev.dependencies]
# lxml = "^6.0.2"  # <- parsel, py314
parsel = { version = "^1.10.0", python = "^3.12" }
pyside6 = { version = "^6.10.2", python = ">=3.12,<3.15" }
# pywin32 = { version = "^311", python = ">=3.12,<3.15" }
# remote-ipython = { version = "^1.0.0b14", source = "likianta" }
wat = "^0.7.0"

[project.optional-dependencies]
# note: to add extras for qmlease in another pyproject.toml, do this:
#   qmlease = { version = ..., extras = ["ui"], python = ">=3.12,<3.14" }

# pip install qmlease[ui]
ui = [
    "pyside6>=6.10.0; python_version >= '3.12' and python_version < '3.15'",
    "pyside6>=6.4.3,<6.5.0; python_version >= '3.10' and python_version < '3.12'",
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
